--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-store.publickey = i52327802934
-store.privatekey = UcuUoBuTYbLvbXUkXm7JFcPfzvRIF2u6pjaJ4G1I
+store.publickey = #Liqpay public key
+store.privatekey = #Liqpay private key
